added route to get user info
